--- a/homework 1/School.html
+++ b/homework 1/School.html
@@ -33,9 +33,9 @@
   <article>
     <h1>學校</h1>
     <p>我的學校是NTUST 國立台灣科技大學</p>
-    <img src="ntust.png" alt="NTUST LOGO" width="500" height="150">
+    <img src="ntust.png" alt="NTUST LOGO" width="300px" height="150px">
     
-    <img src="ntust3.jpg" alt = "NTUST SCHOOL VIEW" width = "400" height = "250">
+    <img src="ntust3.jpg" alt = "NTUST SCHOOL VIEW" width="300px" height="150px">
 
     
   </article>
