--- a/homework 3/Me.html
+++ b/homework 3/Me.html
@@ -35,7 +35,7 @@
   
   <article>
     <h1>自我介紹 Self-Introduction</h1>
-    <img src="profile.jpg" alt="profile" width="500" height="350" style="float:right;">
+    <img src="profile.jpg" alt="profile" width=60% height=auto>
     <p>名字: 楊宏量</p>
     <p>年齡：20歲</p>
     <p>大學：國立臺灣科技大學</p>
