--- a/homework 3/School.html
+++ b/homework 3/School.html
@@ -9,10 +9,7 @@
 
 
 </head>
-<style>
-nav,article {height: 900px;}
 
-</style>
 <body>
 
 <h2>
@@ -46,8 +43,8 @@ nav,article {height: 900px;}
     <p>簡稱：臺灣科大、臺科大、臺科、NTUST、Taiwan Tech</p>
     <p>我今年大二，就讀資訊管理學生班</p>
     
-    <img src="ntust.png" alt="NTUST LOGO" width="600" height="150" style="float:left">
-    <img src="ntust3.jpg" alt = "NTUST SCHOOL VIEW" width = "700" height = "400">
+    <img src="ntust.png" alt="NTUST LOGO" width=80% height=auto style="float:left">
+    <img src="ntust3.jpg" alt = "NTUST SCHOOL VIEW" width =80% height =auto>
 
     
   </article>
