--- a/homework 1/Photo.html
+++ b/homework 1/Photo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <title>My first website</title>
-<meta charset="utf-8">
+<meta charset="utf-8" >
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -33,7 +33,7 @@
   
   <article>
     <h1>生活照</h1>
-    <img src="my.jpg" alt="my photo" width="600" height="350">
+    <img src="my.jpg" alt="my photo" width="300px" height="200px">
     <p>2018年舞會《離情》</p>
     
 
